# agentenv-skills-hub

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/hub-api/: Cargo.toml
crates/hub-api/src/: error.rs  handlers.rs  lib.rs  main.rs  mcp.rs  read_model.rs  routes.rs  state.rs
crates/hub-api/tests/: compatibility.rs  http_contract.rs  mcp_contract.rs
crates/hub-attestation/: Cargo.toml
crates/hub-attestation/src/: ed25519.rs  lib.rs  sigstore.rs
crates/hub-attestation/tests/: attestation.rs
crates/hub-core/: Cargo.toml
crates/hub-core/src/: auth.rs  error.rs  lib.rs  model.rs  service.rs  validation.rs
crates/hub-core/tests/: service.rs  validation.rs
crates/hub-index/: Cargo.toml
crates/hub-index/src/: lib.rs  migrations.rs  postgres.rs
crates/hub-index/tests/: postgres_repository.rs
crates/hub-search/: Cargo.toml
crates/hub-search/src/: lexical.rs  lib.rs  milvus.rs  pgvector.rs  qdrant.rs
crates/hub-search/tests/: search.rs
crates/hub-storage/: Cargo.toml
crates/hub-storage/src/: file.rs  lib.rs  oci.rs  pointer.rs  s3.rs
crates/hub-storage/tests/: storage.rs
crates/hub-webhooks/: Cargo.toml
crates/hub-webhooks/src/: lib.rs  model.rs  render.rs  signing.rs  worker.rs
crates/hub-webhooks/tests/: webhooks.rs
docs/: api.md  operations.md
docs/superpowers/plans/: 2026-05-14-m7-9-hub-mcp.md
docs/superpowers/specs/: 2026-05-14-m7-9-hub-mcp-design.md
migrations/: 0001_init.sql
tests/fixtures/code-review-skill/: SKILL.md  skill.yaml
