[workspace]
resolver = "2"
members = [
    "crates/hub-api",
    "crates/hub-core",
    "crates/hub-index",
    "crates/hub-search",
    "crates/hub-storage",
    "crates/hub-attestation",
    "crates/hub-webhooks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/windoliver/agentenv-skills-hub"
homepage = "https://github.com/windoliver/agentenv-skills-hub"
authors = ["agentenv contributors"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
ed25519-dalek = "2"
hex = "0.4"
hmac = "0.12"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros"] }
tar = "0.4"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"
