[package]
name = "hub-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
qdrant = []
milvus = []

[dependencies]
async-trait.workspace = true
hub-core = { path = "../hub-core" }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
